# access-log-generator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONFIG_GUIDE.md  Dockerfile  LLM.txt  README.md  RELEASE.md  SETUP_GHCR_TOKEN.md  UVX_SETUP_PROMPT.md  VERSION  VERSION_STRATEGY_SUMMARY.md  access-log-generator.py  build.sh  docker-compose.yml  log_schema_outputter.py  pyproject.toml  pytest.ini  release.sh  run-docker.sh
.github/: CONTRIBUTING.md
.github/workflows/: build-and-push.yml  release.yml  test.yml
access_log_generator/: __init__.py  docker-config.yaml
config/: docker-config.yaml
tests/: test_access_log_generator.py  test_integration.py
