[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "access-log-generator"
version = "2.11.0"
description = "Generate realistic NCSA-format web server access logs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Bacalhau Project"}]
keywords = ["logging", "testing", "web", "simulation", "access-logs"]

dependencies = [
    "faker>=33.3.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "flask>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "iniconfig>=2.1.0",
    "packaging>=25.0",
    "pluggy>=1.5.0",
    "six>=1.17.0",
    "typing-extensions>=4.13.2",
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/bacalhau-project/access-log-generator"
Issues = "https://github.com/bacalhau-project/access-log-generator/issues"
Registry = "https://ghcr.io/bacalhau-project/access-log-generator"

[project.scripts]
access-log-generator = "access_log_generator:main"

[tool.hatch.build.targets.wheel]
packages = ["access_log_generator"]
include = [
    "access_log_generator/**/*.py",
    "access_log_generator/config/*.yaml",
]
